--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <article>
             <div id="caja1">
-                <p>La <span id="negrita">no violencia</span> consiste en la negativa a dañar físicamente a otros seres
+                <p><span id="tab1">La</span></span> <span id="negrita">no violencia</span> consiste en la negativa a dañar físicamente a otros seres
                     humanos bajo ninguna
                     circunstancia. Aunque se base a menudo en principios morales o religiosos, la no violencia es
                     también una estrategia para conseguir cambios políticos o sociales. Para los activistas no
@@ -36,7 +36,7 @@
                     en los regímenes que la toleran.
                 </p>
 
-                <p>En el siglo XX, las dos figuras más representativas de la no violencia fueron Mahatma Gandhi y Martin
+                <p><span id="tab2">En</span> el siglo XX, las dos figuras más representativas de la no violencia fueron Mahatma Gandhi y Martin
                     Luther King. Aunque ambos fueron asesinados, ambos ganaron las batallas de sus vidas: la
                     independencia de la India y el reconocimiento de los derechos civiles de los negros norteamericanos.
                 </p>
@@ -60,7 +60,7 @@
                         aplicar
                         en 1914 en Sudáfrica.</p>
                     <p id="parg2">
-                        Nacido en <span id="sub1">Gujarat</span> (India occidental), estudió abogacía en <span
+                        <span id="tab4">Nacido</span> en <span id="sub1">Gujarat</span> (India occidental), estudió abogacía en <span
                             id="sub2">Londres</span> y organizó las primeras acciones de desobediencia civil en <span
                             id="sub3">Sudáfrica</span>, dirigiendo la lucha de la comunidad india por sus derechos
                         civiles. En 1915 volvió a la India y organizó las protestas de campesinos, granjeros y obreros
@@ -74,7 +74,7 @@
                 <div>
                     <p>
 
-                        Gandhi fue encarcelado muchas veces y durante muchos años, tanto en África como en India. Gandhi
+                        <span id="tab5">Gandhi</span> fue encarcelado muchas veces y durante muchos años, tanto en África como en India. Gandhi
                         intentó practicar la no violencia en todas las situaciones y aconsejaba a los demás a hacer lo
                         mismo. Su sueño de una India basada en el pluralismo religioso se quebró ya en 1940 por el
                         nacionalismo musulmán que exigía un país separado de la India. La India obtuvo por fín su
@@ -86,7 +86,7 @@
                         disparos en el pecho.
                     </p>
 
-                    <p>El día de su cumpleaños, el 2 de octubre, se celebra el <span id="bordes">Día Internacional de la
+                    <p><span id="tab6">El</span> día de su cumpleaños, el 2 de octubre, se celebra el <span id="bordes">Día Internacional de la
                             No violencia.</span></p>
 
 
@@ -104,11 +104,11 @@
 
                 <img id="usa" src="imagenes/bandera-usa.jpg">
 
-                <p id="park2"> King lideró en 1955 el boicot a la compañía de autobuses de Montgomery. En 1957 fundó la <span id="azul2">Southern Christian Leadership Conference</span>, desde cuya presidencia organizó numerosas protestas. En 1962 dirigió un movimiento contra la segregación en Albany (Georgia) que fracasó en sus objetivos. En 1963 ayudó en la organización de las protestas no violentas en Birminghan (Alabama). En 1963 organizó la Marcha sobre Washington, donde pronunció su famoso discurso <span>I have a dream</span>. En 1964 recibió el premio Nobel de la Paz por su lucha contra la desigualdad racial mediante la no violencia. En los últimos años de su vida, amplió sus objetivos abordando la pobreza y la guerra de Vietman. En 1968 planeaba la ocupación de Washington D.C. en el marco de una campaña contra la pobreza, cuando fue asesinado en Memphis (Tennessee).</p>
+                <p id="park2"> <span id="tab8">King</span> lideró en 1955 el boicot a la compañía de autobuses de Montgomery. En 1957 fundó la <span id="azul2">Southern Christian Leadership Conference</span>, desde cuya presidencia organizó numerosas protestas. En 1962 dirigió un movimiento contra la segregación en Albany (Georgia) que fracasó en sus objetivos. En 1963 ayudó en la organización de las protestas no violentas en Birminghan (Alabama). En 1963 organizó la Marcha sobre Washington, donde pronunció su famoso discurso <span>I have a dream</span>. En 1964 recibió el premio Nobel de la Paz por su lucha contra la desigualdad racial mediante la no violencia. En los últimos años de su vida, amplió sus objetivos abordando la pobreza y la guerra de Vietman. En 1968 planeaba la ocupación de Washington D.C. en el marco de una campaña contra la pobreza, cuando fue asesinado en Memphis (Tennessee).</p>
 
                 <img id="king" src="imagenes/king.jpg">
 
-                <p> Desde 1986, el <span id="bordes2">Día de Martin Luther King Jr</span>, el tercer lunes de enero, es un día festivo nacional en Estados Unidos. Pero las tensiones raciales nunca se han resuelto en Estados Unidos y prueba de ello es que esta fecha no se festejó en todos los estados hasta el año 2000.
+                <p> <span id="tab9">Desde</span> 1986, el <span id="bordes2">Día de Martin Luther King Jr</span>, el tercer lunes de enero, es un día festivo nacional en Estados Unidos. Pero las tensiones raciales nunca se han resuelto en Estados Unidos y prueba de ello es que esta fecha no se festejó en todos los estados hasta el año 2000.
                     </p>
 
                     <hr id="barra3">
